--- a/style.css
+++ b/style.css
@@ -23,6 +23,18 @@ header {
     padding: 2rem;
 }
 
+.contact-info a {
+    color: inherit;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+
+.contact-info a:hover {
+    color: #000;
+    filter: brightness(0.5);
+}
+
 .profile-img {
     width: 150px;
     height: 150px;
@@ -60,6 +72,7 @@ h1, h2 {
     color: white;
     padding: 0.5rem 1rem;
     border-radius: 20px;
+    cursor: pointer;
 }
 
 .projects {
@@ -76,8 +89,13 @@ h1, h2 {
     grid-auto-columns: minmax(300px, 1fr); /* Cada columna tendrá un mínimo de 300px */
     gap: 2rem;
     overflow-x: auto; /* Scroll horizontal si no caben */
+    scroll-behavior: smooth;
 }
 
+.projects a {
+    text-decoration: none;
+    color: inherit;
+}
 
 .project-card {
     background: white;
@@ -87,10 +105,6 @@ h1, h2 {
     transition: transform 0.3s ease;
 }
 
-a {
-    text-decoration: none;
-    color: inherit;
-}
 
 .project-card:hover {
     transform: translateY(-5px);
@@ -101,6 +115,23 @@ a {
     height: 200px;
     object-fit: cover;
     border-radius: 4px;
+}
+
+.arrow-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 1rem;
+    padding: 10px;
+}
+
+.arrow-container img {
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.arrow-container img:hover {
+    transform: scale(1.2);
 }
 
 @media (max-width: 768px) {
