--- a/style.css
+++ b/style.css
@@ -26,13 +26,12 @@ header {
 .contact-info a {
     color: inherit;
     text-decoration: none;
-    transition: color 0.3s ease;
+    transition: color 0.3s ease, filter 0.3s ease;
 }
-
 
 .contact-info a:hover {
     color: #000;
-    filter: brightness(0.5);
+    filter: brightness(0.2) drop-shadow(0 0 10px #000);
 }
 
 .profile-img {
